objects/Platform_Events_Page__c.object
<CustomObject>
    <fields>
        <fullName>Background_URL__c</fullName>
        <label>Background URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtitle__c</fullName>
        <label>Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <label>Theme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Platform Events Page</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Platform Event Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Events Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>